blue black gradient fix on ie

--- a/ui/mixins.less
+++ b/ui/mixins.less
@@ -680,7 +680,7 @@ meta[name="description"][content=""]:before, meta[name="description"][content=" 
   background-image: -webkit-linear-gradient(top, @color1 0%,@color2 100%);
   background-image: -o-linear-gradient(top, @color1 0%,@color2 100%);
   background-image: linear-gradient(to bottom, @color1 0%,@color2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1', endColorstr='@color2',GradientType=0 );
+  filter: ~'progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1~', endColorstr='@color2~')';
 }
 
 .gradient (@color1, @color2, @color3){
@@ -689,7 +689,7 @@ meta[name="description"][content=""]:before, meta[name="description"][content=" 
   background-image: -webkit-linear-gradient(top, @color1 0%,@color2 100%);
   background-image: -o-linear-gradient(top, @color1 0%,@color2 100%);
   background-image: linear-gradient(to bottom, @color1 0%,@color2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1', endColorstr='@color2',GradientType=0 );
+  filter: ~'progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1~', endColorstr='@color2~',GradientType=0 )';
 }
 // .vertical-gradient = .gradient
 .vertical-gradient (@color1,@color2) {.gradient(@color1,@color2)}
@@ -700,7 +700,7 @@ meta[name="description"][content=""]:before, meta[name="description"][content=" 
   background-image: -webkit-linear-gradient(left, @color1 0%,@color2 100%);
   background-image: -o-linear-gradient(left, @color1 0%,@color2 100%);
   background-image: linear-gradient(to right, @color1 0%,@color2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1', endColorstr='@color2',GradientType=1 );
+  filter: ~'progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1~', endColorstr='@color2~',GradientType=1 )';
 }
 .horizontal-gradient (@color1, @color2, @color3) {
   background: @color3;
@@ -708,7 +708,7 @@ meta[name="description"][content=""]:before, meta[name="description"][content=" 
   background-image: -webkit-linear-gradient(left, @color1 0%,@color2 100%);
   background-image: -o-linear-gradient(left, @color1 0%,@color2 100%);
   background-image: linear-gradient(to right, @color1 0%,@color2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1', endColorstr='@color2',GradientType=1 );
+  filter: ~'progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1~', endColorstr='@color2~',GradientType=1 )';
 }
 .diagonal-gradient (@color1, @color2) {
   background: @color1;
@@ -716,7 +716,7 @@ meta[name="description"][content=""]:before, meta[name="description"][content=" 
   background-image: -webkit-linear-gradient(-45deg, @color1 0%,@color2 100%);
   background-image: -o-linear-gradient(-45deg, @color1 0%,@color2 100%);
   background-image: linear-gradient(135deg, @color1 0%,@color2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1', endColorstr='@color2',GradientType=1 );
+  filter: ~'progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1~', endColorstr='@color2~',GradientType=1 )';
 }
 .diagonal-gradient (@color1, @color2,@color3) {
   background: @color3;
@@ -724,7 +724,7 @@ meta[name="description"][content=""]:before, meta[name="description"][content=" 
   background-image: -webkit-linear-gradient(-45deg, @color1 0%,@color2 100%);
   background-image: -o-linear-gradient(-45deg, @color1 0%,@color2 100%);
   background-image: linear-gradient(135deg, @color1 0%,@color2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1', endColorstr='@color2',GradientType=1 );
+  filter: ~'progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1~', endColorstr='@color2~',GradientType=1 )';
 }
 .radial-gradient (@color1, @color2) {
   background: @color1;
@@ -732,7 +732,7 @@ meta[name="description"][content=""]:before, meta[name="description"][content=" 
   background-image: -webkit-radial-gradient(center, @color1 0%,@color2 100%);
   background-image: -o-radial-gradient(center, @color1 0%,@color2 100%);
   background-image: radial-gradient(at center, @color1 0%,@color2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1', endColorstr='@color2',GradientType=1 );
+  filter: ~'progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1~', endColorstr='@color2~',GradientType=1 )';
 }
 .radial-gradient (@color1, @color2,@color3) {
   background: @color3;
@@ -740,7 +740,7 @@ meta[name="description"][content=""]:before, meta[name="description"][content=" 
   background-image: -webkit-radial-gradient(center, @color1 0%,@color2 100%);
   background-image: -o-radial-gradient(center, @color1 0%,@color2 100%);
   background-image: radial-gradient(at center, @color1 0%,@color2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1', endColorstr='@color2',GradientType=1 );
+  filter: ~'progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1~', endColorstr='@color2~',GradientType=1 )';
 }
 
 /*
@@ -1205,3 +1205,15 @@ meta[name="description"][content=""]:before, meta[name="description"][content=" 
 }
   .animate (...) {.animation(@arguments);}
   .anime (...) {.animation(@arguments);}
+
+
+/* Filters */
+
+.filter(...) {
+
+  -webkit-filter: @arguments;
+  -moz-filter: @arguments;
+  -o-filter: @arguments;
+  filter: @arguments;
+
+}
